<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/menu_profile"
            android:title="@string/profile"/>

        <item android:id="@+id/menu_home"
            android:title="@string/home"/>

        <item android:id="@+id/menu_articles"
            android:title="@string/articles"/>

        <item android:id="@+id/menu_debate"
            android:title="@string/debate"/>

        <item android:id="@+id/menu_videos"
            android:title="@string/videos"/>

        <item android:id="@+id/menu_books"
            android:title="@string/books"/>

        <item android:id="@+id/menu_politics"
            android:title="@string/politics"/>

        <item android:id="@+id/menu_science"
            android:title="@string/science"/>

        <item android:id="@+id/menu_philosophy"
            android:title="@string/philosophy"/>

        <item android:id="@+id/menu_technology"
            android:title="@string/technology"/>

        <item android:id="@+id/menu_sports"
            android:title="@string/sports"/>

        <item android:id="@+id/menu_economy"
            android:title="@string/economy"/>

        <item android:id="@+id/menu_usa"
            android:title="@string/usa"/>

        <item android:id="@+id/menu_china"
            android:title="@string/china"/>

        <item android:id="@+id/menu_russia"
            android:title="@string/russia"/>

        <item android:id="@+id/menu_subcontinent"
            android:title="@string/subcontinent"/>

        <item android:id="@+id/menu_contact"
            android:title="@string/contact"/>

        <item android:id="@+id/menu_about"
            android:title="@string/about"/>

        <item android:id="@+id/menu_help"
            android:title="@string/help"/>

        <item android:id="@+id/menu_logout"
            android:title="@string/logout"/>

    </group>
</menu>